deployments/kubernetes/base/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: tsm-backend
  labels:
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: metrics
      port: 9090
      targetPort: metrics
  selector:
    app.kubernetes.io/component: backend
